--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Photography</title>
 </head>
-<body><h1>Photography website</h1>
+<body><h1>PHOTOGRAPHY</h1>
     <p>Our sole purpose is to communicate through our photos and let the world see beautiful places and animals.This helps people experience this places thet they've never been before and make them want to go there.I know what you're thinking, experience this places through photos? Quite impossobible right? No it's not. We don't just take photos of these places and animals we capture true moments and the unseen beauty of these places. </p>
     <h1>Projects</h1>
     <h2>Here are the top ten projects we've worked on. You'll love these beautiful places</h2>
