change image height

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <li><h3>Samburu Buffalo Springs and Shaba National Reserves</h3></li>
         <p>Buffalo Springs National Reserve is a protected area in the Isiolo County in northern Kenya.</p>
-        <img src="Images/SBS2.jpg" alt="Samburu Buffalo Springs">
+        <img src="Images/SBS2.jpg" alt="Samburu Buffalo Springs" height="200">
 
         <li><h3>Hell's Gate</h3></li>
         <p>Hell's Gate National Park lies south of Lake Naivasha in Kenya, north west of Nairobi.</p>
